# Robotic-Manipulation

./: README.md
exercise1/: CMakeLists.txt  package.xml
exercise1/src/: ros_intro.cpp
exercise2/: CMakeLists.txt  package.xml
exercise2/include/exercise2/: functions.h
exercise2/launch/: sim_with_box.launch
exercise2/model/robots/: lumi.gv  sim.urdf  sim.urdf.xacro  sim.urdf.xacro~
exercise2/src/: plan.cpp
exercise3/: CMakeLists.txt  package.xml
exercise3/include/exercise3/: functions.h
exercise3/launch/: publish_frames.launch  sim_with_box.launch
exercise3/model/robots/: sim.urdf  sim.urdf.xacro
exercise3/src/: pick_and_place.cpp
exercise4/: CMakeLists.txt  exercise4_controller_plugin.xml  package.xml
exercise4/config/: controllers.yaml
exercise4/include/exercise4/: Exercise4Controller.h  Robot.h
exercise4/launch/: sim.launch  sim_calibration_error.launch
exercise4/model/robots/: sim.urdf  sim.urdf.xacro
exercise4/src/: Exercise4Controller.cpp  Robot.cpp  run.cpp
exercise5/: CMakeLists.txt  exercise5_controller_plugin.xml  package.xml
exercise5/config/: controllers.yaml
exercise5/data/: file.cpp  generate_grasp_points.sh  grasp_data.txt  vertices.txt
exercise5/include/exercise5/: Exercise5Controller.h  Robot.h  functions.h
exercise5/launch/: sim.launch  sim_calibration_error.launch  simulation.launch
exercise5/model/meshes/: object.blend  polygon.dae  polygon.stl  polygon_03.stl
exercise5/model/robots/: sim_mujoco.urdf  sim_mujoco.urdf.xacro  sim_ros.urdf  sim_ros.urdf.xacro
exercise5/src/: Exercise5Controller.cpp  Robot.cpp  run.cpp
exercise6/: CMakeLists.txt  exercise6_controller_plugin.xml  package.xml
exercise6/config/: controllers.yaml
exercise6/include/exercise6/: Exercise6Controller.h
exercise6/launch/: sim.launch  simulation.launch
exercise6/model/meshes/: object.blend
exercise6/model/robots/: hand.xacro  sim.urdf  sim.urdf.xacro  sim2.urdf  sim2.urdf.xacro  sim_mujoco.urdf  sim_mujoco.urdf.xacro  sim_ros.urdf  sim_ros.urdf.xacro
exercise6/src/: Exercise6Controller.cpp  Robot.cpp  a.out  run.cpp  test.cpp
lumi_testbed/: README.md
lumi_testbed/lumi_description/: .gitignore  CMakeLists.txt  package.xml
lumi_testbed/lumi_description/launch/: rviz.rviz  show.launch
lumi_testbed/lumi_description/robots/: robot.urdf.xacro  robot_table.xml  robot_table_env.urdf.xacro  robot_table_env.xml
lumi_testbed/lumi_moveit_config/: .gitignore  .setup_assistant  CMakeLists.txt  package.xml
lumi_testbed/lumi_moveit_config/config/: controllers.yaml  joint_limits.yaml  kinematics.yaml  lumi.srdf  ompl_planning.yaml
lumi_testbed/lumi_moveit_config/launch/: chomp_planning_pipeline.launch.xml  lumi_moveit.launch  lumi_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml
lumi_testbed/lumi_mujoco/: CMakeLists.txt  package.xml
lumi_testbed/lumi_mujoco/config/: controllers.yaml
lumi_testbed/lumi_mujoco/launch/: simulation.launch  table_simulation.launch
lumi_testbed/lumi_mujoco/src/: gripper_action_to_trajectory_action.cpp
mujoco_ros_control_updated/: CMakeLists.txt  ReadMe.md  package.xml
mujoco_ros_control_updated/cmake/: Findglfw3.cmake  Findmujoco.cmake
mujoco_ros_control_updated/include/mujoco_ros_control/: RenderImage.h  RobotHWMujoco.h
mujoco_ros_control_updated/src/: RenderImage.cpp  RobotHWMujoco.cpp  mujoco_control.cpp
mujoco_ros_control_updated/tests/: mujoco.cpp
