<?xml version="1.0"?>
<package format="2">
    <name>exercise1</name>
    <version>0.0.1</version>
    <description>
        Package ros_intro.
    </description>
    <maintainer email="jens.lundell@aalto.fi">Jens Lundell</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>
</package>
